# Practice-Engine

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Lilasoul.sln  Practice.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  configure.bat  premake5.lua
Macros/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Practice/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Lilasoul.vcxproj  Lilasoul.vcxproj.filters  Practice.vcxproj  Practice.vcxproj.filters  cmake_install.cmake
Practice/Lilasoul.dir/Debug/: Lilasoul.dll.recipe
Practice/Lilasoul.dir/Debug/Lilasoul.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
Practice/src/: Lilasoul.h  lspch.h
Practice/src/Lilasoul/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Keycodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Practice/src/Lilasoul/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Practice/src/Lilasoul/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Practice/src/Lilasoul/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Practice/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Practice/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Sandbox.vcxproj  Sandbox.vcxproj.filters  cmake_install.cmake
Sandbox/Sandbox.dir/Debug/: Sandbox.exe.recipe
Sandbox/Sandbox.dir/Debug/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sandbox/src/: SandBoxApp.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
